Align with BHATS