@@ -38,8 +38,8 @@ public class KafkaPayloadProcessorTest {
                     DataPayload r = new DataPayload();
                     r.tsid = "tsid" + (i % 10);  // 10 different keys
                     Datapoint dp = new Datapoint();
-                    dp.value = "value" + i;
-                    r.datapoints = Arrays.asList(dp);
+                    dp.value = "datapoint" + i;
+                    r.datapoints = List.of(dp);
                     records.add(r);
                 }
                 payloadService.submitLargePayload("payload-" + p, records);
