@@ -69,8 +69,8 @@ public class MultiClusterKafkaIntegrationTest {
             DataPayload r = new DataPayload();
             r.tsid = "tsid" + (i % 10);
             Datapoint dp = new Datapoint();
-            dp.value = "value" + i;
-            r.datapoints = Arrays.asList(dp);
+            dp.value = "datapoint" + i;
+            r.datapoints = List.of(dp);
             records.add(r);
         }
         producer.send(payloadId, records);
